--- a/rickyMartinAPP/src/app/components/pages/characters/characters-list/characters-list.component.html
+++ b/rickyMartinAPP/src/app/components/pages/characters/characters-list/characters-list.component.html
@@ -2,23 +2,18 @@
     <div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let character of characters">
         <div class="card">
             <div class="image">
-                <a [routerLink]="['/character-details', character.id]">
-                    <img [src]="character.image" [alt]="character.name" class="card-img-top">
-                </a>
+                <img [src]="character.image" [alt]="character.name" class="card-img-top">
             </div>
             <div class="card-inner">
-                <div class="header">
-                    <a [routerLink]="['/character-details', character.id]">
-                        <h2>character.name</h2>
-                    </a>
-                    <h4 class="text-muted">character.gender</h4>
-                    <small class="text-muted">character.created</small>
+                <div class="header">    
+                    <h2>{{character.name | slice: 0:15}}</h2>
+                    <h4 class="text-muted">{{character.gender}}</h4>
+                    <small class="text-muted">{{character.created | date}}</small>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-12 mt-5 container-notFound">
+    <div class="col-xs-12 col-sm-12 col-md-12 mt-5 container-notFound" *ngIf="characters.length <= 0">
         <p>No results......</p>
     </div>
 </div>
-<button class="btn btn-dark">Go Up</button>
